--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,4 @@ jobs:
       - name: Install packages
         run: |
           pip install requests
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-      - run: python run.py
+          python run.py
