fix token error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: Install packages
+
+      - name: Git init
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+
+      - name: Update plugins
         env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}'
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python run.py
