--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,15 @@
 name: Update
 
 # Controls when the workflow will run
-on:
-  push:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a sigle job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
