--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Active Gitee Page
 
 # Controls when the workflow will run
 on:
   schedule:
-  - cron: "25 9 * * *"
+  - cron: "50 1 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,66 +22,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
-      - name: Create dir and git init
-        run: |
-          [[ ! -d tmp ]] && mkdir tmp
-          [[ ! -d plugins ]] && mkdir plugins
-          ls ./
-          ls tmp/
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-
-      - name: Read source.txt
-        run: |
-          # Loop
-          cat source.txt | while read line;
-          do
-            [[ $line =~ ^#.* ]] && continue
-            repo=`echo $line | cut -d '|' -f 3`
-            echo $repo
-
-            # Find API URL
-            apiUrl=`echo $repo | sed 's/github.com/api.github.com\/repos/'`"/releases/latest"
-            echo $apiUrl
-
-            # Download release zip
-            curl --request GET \
-              --url ${apiUrl} \
-              --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-              --header 'content-type: application/json' | \
-              grep "browser_download_url" | cut -d : -f 2,3 | tr -d \" | wget -P tmp -qi -
-            
-            ls tmp/
-            # MD5 
-            md5Out=`md5sum tmp/*.xpi`
-            echo $md5Out"-"
-            md5String=`echo $md5Out | cut -d ' ' -f 1`
-            wc -l md5check.txt
-
-            # Check file if exists by md5 value
-            echo $md5String"--"
-
-            if grep -q $md5String md5check.txt  # File is downloaded
-            then
-              echo $repo" released downloaded"
-              rm tmp/*.xpi  # Remove downloaded file
-            else
-              # Add new value to md5check.txt
-              echo $md5Out >> md5check.txt
-              wc -l md5check.txt
-              # Keep latest version
-              xpifile=`ls tmp/*.xpi`
-              mv ${xpifile} plugins/
-              git add plugins
-              git commit -m "Upload ${xpifile#tmp/}"
-              git add md5check.txt
-              git commit -m "Update md5check.txt, ${xpifile#tmp/} md5sum value"
-              git push origin main
-            fi
-          done
-
-        
-      - name: List files
-        run: ls -al ./
-
-
+      - name: Build Gitee Pages
+        uses: yanglbme/gitee-pages-action@main
+        with:
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: l0o0
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITEE_PASSWORD }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: zotero-chinese/zotero-plugins
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: main
