--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,5 +31,7 @@ jobs:
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: zotero-chinese/zotero-plugins
+          # 需要部署Page的目录
+          directory: docs
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
           branch: main
